--- a/src/components/NavigationBar/style.scss
+++ b/src/components/NavigationBar/style.scss
@@ -12,9 +12,6 @@
     font-weight: bold;
 
     a {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
 
         &,
         &:hover,
